--- a/src/Presentation/MiniETicaret.WebApi/appsettings.json
+++ b/src/Presentation/MiniETicaret.WebApi/appsettings.json
@@ -8,6 +8,12 @@
     "ConnectionStrings": {
         "Default": "Server=NASIBPC\\MICROSOFTSSQL;Database=MiniETicaret;Trusted_Connection=True;TrustServerCertificate=True;"
     },
+    "JwtSettings": {
+        "SecretKey": "U6f$z!kP9q@Wb7Lx2#MvTgYcN8r$E*J1",
+        "Issuer": "https://localhost:7235",
+        "Audience": "http://localhost:5088",
+        "ExpiryMinutes": 60
+    },
     "AllowedHosts": "*"
 }
 
