Email Service,FIleUpload Service, Add Role, UserRegister Enum

--- a/src/Presentation/MiniETicaret.WebApi/appsettings.json
+++ b/src/Presentation/MiniETicaret.WebApi/appsettings.json
@@ -13,7 +13,18 @@
         "Issuer": "https://localhost:7235",
         "Audience": "http://localhost:5088",
         "ExpiryMinutes": 60
+
+
     },
+    "EmailSettings": {
+        "SmtpServer": "smtp.gmail.com",
+        "SmtpPort": 587,
+        "SenderName": "MiniETicaret",
+        "SenderEmail": "asgarbaylinasib@gmail.com",
+        "UserName": "Nasib Asgarbayli",
+        "Password": "yejm lfsz pkdk scls"
+    },
+
     "AllowedHosts": "*"
 }
 
