--- a/src/Infrastructure/MiniETicaret.Infrastructure/MiniETicaret.Infrastructure.csproj
+++ b/src/Infrastructure/MiniETicaret.Infrastructure/MiniETicaret.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\..\Core\MiniETicaret.Application\MiniETicaret.Application.csproj" />
   </ItemGroup>
 
 </Project>
