--- a/src/Infrastructure/MiniETicaret.Persistence/MiniETicaret.Persistence.csproj
+++ b/src/Infrastructure/MiniETicaret.Persistence/MiniETicaret.Persistence.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\MiniETicaret.Application\MiniETicaret.Application.csproj" />
+    <ProjectReference Include="..\MiniETicaret.Infrastructure\MiniETicaret.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
