--- a/src/Presentation/MiniETicaret.WebApi/appsettings.json
+++ b/src/Presentation/MiniETicaret.WebApi/appsettings.json
@@ -25,6 +25,14 @@
         "Password": "yejm lfsz pkdk scls"
     },
 
+
+    "CloudinarySettings": {
+        "CloudName": "ddof9ewnm",
+        "ApiKey": "279954956484712",
+        "ApiSecret": "0Z-D89ZTrpHMLzgh81q2qFmVQVQ"
+    },
+
+
     "AllowedHosts": "*"
 }
 
