--- a/src/Infrastructure/MiniETicaret.Persistence/MiniETicaret.Persistence.csproj
+++ b/src/Infrastructure/MiniETicaret.Persistence/MiniETicaret.Persistence.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
     <PackageReference Include="Hangfire.Core" Version="1.8.20" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
